# simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  REPORT.md  executor.h  fs.cpp  fs.h  global.cpp  global.h  heap.cpp  heap.h  instrcution.cpp  instrcution.h  instruction_impl.cpp  instruction_impl.h  mainwindow.cpp  mainwindow.h  mainwindow.ipp  mainwindow.ui  syscall.h  test
include/: executor.h  fs.h  global.h  heap.h  instrcution.h  instruction.h  instruction_impl.h  mainwindow.h  mainwindow.ipp  mainwindow.ui  stack.h  syscall.h
misc/: resources.qrc
src/: executor.cpp  executor.h  fs.h  global.cpp  global.h  heap.cpp  heap.h  instrcution.cpp  instruction.cpp  instruction.h  instruction_impl.cpp  instruction_impl.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stack.cpp  stack.h  syscall.h
testcases/: div.S  exit2.S  factorial.S  fibonacci.S  file.S  greetings.S  many.S  mini.S  power.S  special.S
