cmake_minimum_required(VERSION 3.5)

project(simulator LANGUAGES CXX)
add_subdirectory(assembler)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

include_directories(include assembler/include assembler/abseil-cpp)
find_package(Qt5 COMPONENTS Widgets REQUIRED)
find_package(Threads REQUIRED)
find_package(OpenMP REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
file(GLOB CXX_FILES src/*.cpp)
file(GLOB HEADER_FILES src/*.h src/*.ipp)
file(GLOB QT_FILES src/*.ui misc/*.qrc)
add_executable(simulator ${CXX_FILES} ${HEADER_FILES} ${QT_FILES})
target_link_libraries(simulator PRIVATE Threads::Threads Qt5::Widgets assembler_api)
